Replace OpenAI with Google Books API and CSV upload

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,10 @@
     <div>
       <label><input type="checkbox" id="useHistory"/> Use Goodreads history</label>
     </div>
+    <div>
+      <label for="csvFile">Upload CSV of your books</label>
+      <input type="file" id="csvFile" accept=".csv" />
+    </div>
     <button type="submit">Search</button>
   </form>
   <div id="recommendations"></div>
